# N7-Projects

./: .gitattributes  .gitignore  README.md
AP/: TP_Localisation_et_détection_dobjet_Sujet.ipynb
AppWeb/: README.md
AppWeb/TP1/: hello.war  template.tar.xz
Automates/TP1/: lexerJava.mll
Automates/TP2/: parserJava.mly
Automates/be2025-source/: be2025-source-DISSOUBRAY-KAMAL.tgz
Deep_learning/: README.md
Deep_learning/viennoiseries-detection/: README.md  classes.txt  data.yaml  entrainement_detection_viennoiseries.ipynb
EDP/: Projet.ipynb  README.md
EDP/TP(1)/: TP-EDP.ipynb
Graphes/: README.md
Graphes/Projet/: analysis_report.txt  prj.py  results.json
IDM/: README.md
IDM/TP1/: exo5.ndr  interblocage.adr  saisons.ktz  saisons.ndr
Infographie/: README.md
Intergiciel/: README.md
Intergiciel/socket-subject/: LoadBalancer.java  subject-socket.odt
Intergiciel/ws-subject/: tp-ws.odt
MOD_GEO/TP1/: README.md
MOD_GEO/TP2/: README.md  TP1_interpolation_Part1.ipynb  utilities.py
MT/: README.md
MT/.metadata/: version.ini
Modelisation/: README.md
Modelisation_geometrique/: README.md
Modelisation_geometrique/TP1/: TP_approximation.ipynb  (+1 more)
OpenGl/: README.md
OpenMP/: README.md
PFO/: README.md
Projet_image/: requirements.txt  seam_carving.py
ROP/: InstructionsGLPK.txt
TDL/: sourceEtu.tar(4)
TI/tpTI-v2026.1.0-rc4/src/tp/: CMakeLists.txt  README.md  estimation_modes.hpp  kmeans_fct.cpp  kmeans_fct.hpp
Traduction_des_languages/: README.md
Traitement_d_images/: README.md
Traitement_donnees_audiovisuels/: README.md  debruitage.m
(+1352 files in other folders)
